minor fixes on pan & table spread & others

--- a/static/styles/Diagram.css
+++ b/static/styles/Diagram.css
@@ -16,7 +16,7 @@ svg {
 
 #D3Container {
     border-radius: 5px;
-    border : 1px solid #424040;
+    border : 5px solid #5c5959;
     background-color: #8f77ae;
     overflow: hidden;
     width: 100%;
